--- a/amplify.yml
+++ b/amplify.yml
@@ -1,13 +1,17 @@
 version: 1
 frontend:
   phases:
-    # IMPORTANT - Please verify your build commands
+    preBuild:
+        commands:
+          - cd frontend
+          - npm ci
     build:
-      commands: [npm run build]
+        commands:
+          - npm run build
   artifacts:
-    # IMPORTANT - Please verify your build output directory
-    baseDirectory: /
+    baseDirectory: ./swolegaming-web/build
     files:
       - '**/*'
   cache:
-    paths: []
+    paths:
+      - node_modules/**/*
